--- a/MockupProjetoFinal/View/Base.lproj/Main.storyboard
+++ b/MockupProjetoFinal/View/Base.lproj/Main.storyboard
@@ -185,22 +185,6 @@
             </objects>
             <point key="canvasLocation" x="-804" y="1001"/>
         </scene>
-        <!--Meus Pedidos-->
-        <scene sceneID="1fo-o2-iyV">
-            <objects>
-                <viewController id="LOB-Xh-LW8" customClass="MyOrdersViewController" customModule="MockupProjetoFinal" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Exc-fg-s7U">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="Qjl-pZ-Pke"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Meus Pedidos" id="mOx-aS-54z"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="9aT-np-EWp" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1772" y="800"/>
-        </scene>
         <!--Batch View Controller-->
         <scene sceneID="4Gr-5r-Uvn">
             <objects>
@@ -805,9 +789,9 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="LOB-Xh-LW8" kind="relationship" relationship="viewControllers" id="Tcu-KX-WzN"/>
                         <segue destination="YZg-he-xzj" kind="relationship" relationship="viewControllers" id="zMp-yw-jYp"/>
                         <segue destination="WLx-nM-aHa" kind="relationship" relationship="viewControllers" id="nvB-Q3-bXs"/>
+                        <segue destination="0rd-61-yOX" kind="relationship" relationship="viewControllers" id="5c3-7b-29u"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="j2G-Gu-3DI" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -851,6 +835,71 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tgP-QU-4bB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1440.8" y="-706.59670164917543"/>
+        </scene>
+        <!--Meus Pedidos-->
+        <scene sceneID="2n1-Rh-XEn">
+            <objects>
+                <collectionViewController title="Meus Pedidos" id="0rd-61-yOX" customClass="MyBatchesViewController" customModule="MockupProjetoFinal" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="tzJ-Mx-fTm">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="QyS-gV-6lU">
+                            <size key="itemSize" width="375" height="136"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="C5Q-02-jVJ" customClass="BatchCollectionViewCell" customModule="MockupProjetoFinal" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="136"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="136"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fJr-9y-PhH">
+                                            <rect key="frame" x="18" y="50" width="339" height="58"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="58" id="pUa-oD-3Rb"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pWO-mw-SOr">
+                                            <rect key="frame" x="20" y="20" width="355" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </view>
+                                <constraints>
+                                    <constraint firstItem="pWO-mw-SOr" firstAttribute="leading" secondItem="C5Q-02-jVJ" secondAttribute="leadingMargin" constant="4" id="C9M-HL-m1W"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="fJr-9y-PhH" secondAttribute="trailing" constant="10" id="OQQ-Dp-XLY"/>
+                                    <constraint firstItem="fJr-9y-PhH" firstAttribute="leading" secondItem="C5Q-02-jVJ" secondAttribute="leadingMargin" constant="10" id="Vas-ib-cVB"/>
+                                    <constraint firstAttribute="bottomMargin" secondItem="fJr-9y-PhH" secondAttribute="bottom" constant="20" id="rE8-dR-Jfp"/>
+                                    <constraint firstAttribute="trailing" secondItem="pWO-mw-SOr" secondAttribute="trailing" id="xOy-Dt-R9S"/>
+                                    <constraint firstItem="fJr-9y-PhH" firstAttribute="top" secondItem="pWO-mw-SOr" secondAttribute="bottom" constant="17" id="yY4-0Y-vTc"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="productDescription" destination="fJr-9y-PhH" id="JbW-Nc-MkQ"/>
+                                    <outlet property="productTitle" destination="pWO-mw-SOr" id="c1u-AQ-hOD"/>
+                                </connections>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="0rd-61-yOX" id="yj4-h4-Lfs"/>
+                            <outlet property="delegate" destination="0rd-61-yOX" id="U6Z-MS-Hk4"/>
+                        </connections>
+                    </collectionView>
+                    <tabBarItem key="tabBarItem" title="Meus Pedidos" id="AK7-x6-3dI"/>
+                    <navigationItem key="navigationItem" id="nWM-BN-uXF"/>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TUI-OH-288" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1886" y="825"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
